--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "license": "ISC",
   "dependencies": {
     "pg": "^8.2.1",
-    "ws": "^7.3.0"
+    "ws": "^7.3.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "express": "^4.17.1"
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-nodemon": "^2.5.0"
   }
 }
