--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.5.0"
   }
