--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "author": "brian@brianfox.fr",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "pg": "^8.2.1",
-    "ws": "^7.3.0",
-    "express": "^4.17.1"
+    "ws": "^7.3.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
