--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/main.js",
   "scripts": {
     "start": "node server/main.js",
-    "test": "mocha"
+    "test": "mocha",
+    "e2e": "npm start & wait-on http://localhost:3000 & npx cypress run --spec cypress/integration/home_page_spec.js"
   },
   "keywords": [
     "BabyFoot",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "cypress": "^4.6.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
