--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 before_script:
   - export DISPLAY=:99.0
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then pg_ctl -D /usr/local/var/postgres start; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then createuser -s postgres; fi
   - psql -c 'CREATE DATABASE babyfoot;' -U postgres
   - psql -c "CREATE USER tablesoccer WITH PASSWORD 'travisonly';" -U postgres
   - psql -c "GRANT ALL PRIVILEGES ON DATABASE babyfoot TO tablesoccer;" -U postgres
 os:
   - linux
+  - osx
 env:
   - BF_PGPASSWORD=travisonly
 language: node_js
