--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/main.js",
     "test": "mocha",
-    "e2e": "npm start & wait-on http://localhost:3000 & npx cypress run --spec cypress/integration/home_page_spec.js"
+    "cypress": "cypress run --spec cypress/integration/home_page_spec.js",
+    "e2e": "start-server-and-test http://localhost:3000 cypress"
   },
   "keywords": [
     "BabyFoot",
@@ -25,6 +26,7 @@
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "pg": "^8.2.1",
+    "start-server-and-test": "^1.11.0",
     "ws": "^7.3.0"
   },
   "devDependencies": {
