--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ip": "^1.1.5",
     "pg": "^8.2.1",
     "start-server-and-test": "^1.11.0",
+    "uuid": "^8.1.0",
     "ws": "^7.3.0"
   },
   "devDependencies": {
